Real.toString now generates same thing as arb_printstr instead of arb_getstr