@@ -35,10 +35,23 @@ public class Magnitude implements AutoCloseable,Comparable<Magnitude> {
   }
 
 
+  public String toString( int digits )
+  {
+    try ( Float floatMag = new Float())
+    {
+      arblib.arf_set_mag(floatMag, this);
+      return floatMag.toString(digits);
+    }
+  }
+  
   @Override
   public String toString()
   {
-    return Double.valueOf(doubleValue()).toString();
+    try ( Float floatMag = new Float())
+    {
+      arblib.arf_set_mag(floatMag, this);
+      return floatMag.toString();
+    }
   }
 
 
